<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_weight="200"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_weight="60"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/user_profile"
        android:textSize="25sp"
        android:textColor="@color/colorAccent2"
        android:layout_marginBottom="20dp"
        />
    <androidx.cardview.widget.CardView
        android:layout_marginBottom="20dp"
        android:id="@+id/image_view1"
        android:layout_marginTop="20dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        app:cardCornerRadius="150dp"
        app:cardElevation="5dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/todo"
            android:src="@drawable/ic_user_2"
            tools:ignore="ImageContrastCheck" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/user_name"
        android:layout_weight="60"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/user_name"
        android:textSize="20sp"
        android:textColor="@color/colorAccent2"
        android:layout_marginBottom="20dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/phone_number"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/user_number"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/phone_number"/>

    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textSize="18sp"
            android:text="@string/email"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/user_email"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/end_date"/>

    </LinearLayout>


    <Button
        android:id="@+id/edit_info"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/info_entry"
        android:textColor="@color/white"
        />
    <Button
        android:id="@+id/logout_btn2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/logout"
        android:textColor="@color/white"
        />



</LinearLayout>