<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_weight="100"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_weight="60"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/choose"
        android:textSize="25sp"
        android:textColor="@color/colorAccent2"
        android:layout_marginBottom="20dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="@color/colorPrimaryDark"/>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/camera"
        android:layout_marginBottom="10dp"
        android:layout_weight="40"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textColor="@color/colorPrimaryMDark"
        android:text="@string/camera"
        android:gravity="center"
        android:textSize="15sp"/>


    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/gallery"
        android:layout_marginBottom="20dp"
        android:layout_weight="40"
        android:textColor="@color/colorPrimaryMDark"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/gallery"
        android:gravity="center"
        android:textSize="15sp"/>

</LinearLayout>