<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:layout_weight="100"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_weight="40"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/reset"
        android:textSize="30sp"
        android:textColor="@color/colorAccent2"
        android:layout_marginBottom="20dp"

        />

    <EditText
        android:layout_marginTop="20dp"
        android:layout_weight="30"
        android:id="@+id/email_reset"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:inputType="textEmailAddress"
        android:elevation="10dp"
        android:background="@drawable/text_field"
        />

    <Button
        android:layout_marginBottom="30dp"
        android:id="@+id/reset_btn"
        android:layout_weight="30"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/button"
        android:text="@string/submit"
        android:textColor="@color/white"
        />
</LinearLayout>