<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login"
        android:background="@drawable/ic_background_2"
    android:orientation="vertical"
    android:weightSum="100">

    <LinearLayout
        android:layout_weight="36"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="70dp"
        android:id="@+id/login">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_logo_with_text" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="10"
        android:weightSum="100"
        android:id="@+id/welcome_msg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:layout_weight="70"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/welcome"
            android:textSize="40sp"
            android:textColor="@color/colorAccent2"

            />
        <TextView
            android:layout_weight="30"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/enjoy_login"
            android:textColor="@color/colorAccent2"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:weightSum="100"
        android:layout_weight="54"
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">


            <EditText
                android:layout_marginBottom="20dp"
                android:layout_weight="13"
                android:id="@+id/email_login"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="20dp"
                android:elevation="10dp"
                android:background="@drawable/text_field"
                tools:ignore="RtlSymmetry,TextFields"
                />


        <EditText
            android:layout_weight="13"
            android:id="@+id/password_login"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/password"
            android:paddingStart="20dp"
            android:inputType="textPassword"
            android:elevation="10dp"
            android:background="@drawable/text_field"
            tools:ignore="RtlSymmetry,TextFields"
            />
        <Button
            android:id="@+id/login_btn"
            android:layout_weight="13"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textColor="@color/white"
            />
        <LinearLayout
            android:layout_weight="49"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:text="@string/login_with"
                android:textSize="14sp"
                android:textColor="@color/colorAccent2"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal"
                android:gravity="center">
                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_google___original"
                    android:id="@+id/google_login"
                    android:background="@color/white"/>
                <ImageButton
                    android:layout_width="45dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:id="@+id/face_book_login"
                    android:background="@color/white"
                    android:src="@drawable/ic_facebook_original"/>
                <ImageButton
                    android:layout_width="45dp"
                    android:id="@+id/twitter_login"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_tweet_original"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="30dp"
                android:weightSum="100"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView

                    android:id="@+id/Forgot_Password"
                    android:layout_gravity="start"
                    android:layout_weight="50"
                    android:paddingStart="30dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/forgot"/>
                <TextView
                    android:id="@+id/Create_Account"
                    android:gravity="end"
                    android:paddingEnd="30dp"
                    android:layout_weight="50"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/create"/>

            </LinearLayout>
        </LinearLayout>
        </LinearLayout>





</LinearLayout>


