<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewsFeedFragment"
    android:orientation="vertical"
    android:background="@color/WhiteBackground">


            <LinearLayout
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_width="360dp"
                android:layout_height="70dp"
                android:gravity="center"
                android:orientation="horizontal">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_notification"
                    android:contentDescription="@string/notification"/>
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_gravity="center"
                    android:gravity="center"
                    />
                <LinearLayout
                    android:padding="2dp"
                    android:layout_width="55dp"
                    android:gravity="center"
                    android:layout_height="55dp">

                <androidx.cardview.widget.CardView

                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_gravity="center"
                    android:background="@color/colorPrimary"
                    app:cardCornerRadius="150dp"
                    android:id="@+id/clickProfile"
                    app:cardElevation="5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/action_cancel"
                        android:src="@drawable/ic_user_2"
                        tools:ignore="ImageContrastCheck" />

                </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:id="@+id/search_bar"
                    android:hint="@string/search_msg"
                    app:startIconDrawable="@drawable/ic_search_2"
                    app:endIconDrawable="@drawable/ic_fliter"
                    app:endIconMode="custom"
                    app:endIconTint="@color/colorPrimaryDark"
                    app:startIconTint="@color/colorPrimaryDark"
                    app:endIconContentDescription="@string/filter"
                    app:startIconContentDescription="@string/search"
                    app:boxStrokeColor="@color/colorPrimaryDark"
                    app:boxBackgroundColor="@color/white"
                    style="@style/bounders"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="15sp"


                        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">
                <androidx.recyclerview.widget.RecyclerView

                    android:id="@+id/recycleView_post"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </ScrollView>




</LinearLayout>