<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/WhiteBackground"
    tools:context=".UploadImage"
    android:orientation="vertical">



    <LinearLayout
        android:layout_weight="1"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_width="360dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:padding="2dp"
            android:layout_width="40dp"
            android:gravity="center"
            android:layout_height="40dp">

            <androidx.cardview.widget.CardView

                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                app:cardCornerRadius="150dp"
                app:cardElevation="5dp">
                <ImageView
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_arrow"
                    android:contentDescription="@string/todo" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <TextView
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:text="@string/previous_journey2"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:gravity="center"
            />
        <LinearLayout
            android:padding="2dp"
            android:layout_width="40dp"
            android:gravity="center"
            android:layout_height="40dp">

            <androidx.cardview.widget.CardView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                app:cardCornerRadius="150dp"
                app:cardElevation="5dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_user_2"
                    tools:ignore="ImageContrastCheck"
                    android:contentDescription="@string/todo" />

            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </LinearLayout>
    <RelativeLayout
        android:layout_weight="10"
        android:layout_width="wrap_content"
        android:layout_marginBottom="-20dp"
        android:layout_height="0dp">
        <androidx.cardview.widget.CardView
            android:layout_marginTop="20dp"
            android:id="@+id/bookmarks_like_post"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            app:cardCornerRadius="150dp"
            app:cardElevation="10dp">
            <ImageView
                android:padding="10dp"
                android:layout_gravity="end"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_bookmark_2"
                />

        </androidx.cardview.widget.CardView>
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPageImageSlider_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/ic_add_image_with_white2" />
    </RelativeLayout>

    <LinearLayout
        android:layout_marginTop="-5dp"
        android:layout_weight="5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@drawable/back_dalog_white2">

        <LinearLayout
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:id="@+id/post_location"
            android:elevation="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:orientation="horizontal">
            <ImageView
                android:padding="5dp"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_locatio_2"
                android:contentDescription="@string/todo" />
            <TextView
                android:id="@+id/location_view_details"
                android:layout_gravity="center"
                android:textColor="@color/colorPrimaryDark"
                android:gravity="center"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/location_example"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/title_view_details"
                android:layout_marginStart="5dp"
                android:layout_width="250dp"
                android:layout_height="match_parent"
                android:textSize="30sp"
                android:text="@string/example_title"
                android:textColor="@color/colorPrimaryDark"
                />

            <LinearLayout
                android:id="@+id/edit_details"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_weight="1.2"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    android:src="@drawable/ic_edit__1_"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/edit"
                    android:textColor="@color/colorPrimaryDark"/>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/delete_details"
                android:layout_marginEnd="20dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView

                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1.2"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    android:src="@drawable/ic_trash_2"
                    android:contentDescription="@string/todo" />

                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/delete"
                    android:textColor="@color/colorPrimaryDark"/>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/share_details"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1.2"
                    android:layout_width="30dp"
                    android:layout_height="0dp"
                    android:src="@drawable/ic_share_2"
                    android:contentDescription="@string/todo" />
                <TextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:text="@string/share"
                    android:textColor="@color/colorPrimaryDark"/>


            </LinearLayout>



        </LinearLayout>
        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_width="230dp"
                android:layout_height="match_parent"
                android:textSize="25sp"
                android:text="@string/description"
                android:textColor="@color/colorPrimaryDark"
                />
            <TextView
                android:id="@+id/date_view_details"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="@string/date"
                android:textColor="@color/colorPrimaryDark"
                />
        </LinearLayout>
        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scrollbars="vertical">
            <TextView
                android:id="@+id/description_view_details"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/example_dec_msg"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"/>
        </ScrollView>


    </LinearLayout>



</LinearLayout>